bug fixes: horizontal scrolling, footer

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 html, body{
 overflow-x: hidden;
-height: 100vh;
+/* height: 100vh; */
 }
 body {
     position: relative;
